Update IB May 2019 UPrep Analysis.ipynb
Try hiding code

--- a/IB May 2019 UPrep Analysis.ipynb
+++ b/IB May 2019 UPrep Analysis.ipynb
@@ -3113,9 +3113,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    },
     "tags": [
      "hide_input"
     ]
@@ -3189,10 +3186,32 @@
     "\n",
     "    py.iplot(fig, filename='Histogram panels')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<script src=\"https://cdn.rawgit.com/parente/4c3e6936d0d7a46fd071/raw/65b816fb9bdd3c28b4ddf3af602bfd6015486383/code_toggle.js\"></script>"
+   ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
